@@ -25,9 +25,9 @@ JavaSyntaxKit.TokenMarker.TokenTypes = IDENTIFIER, TYPE, TYPE2, TYPE3
 #
 JavaSyntaxKit.SingleColorSelect = true
 #
-# DIsplaying of a right marigin line:
-JavaSyntaxKit.RightMariginColumn = 80
-JavaSyntaxKit.RightMariginColor = 0xdd6666
+# DIsplaying of a right margin line:
+JavaSyntaxKit.RightMarginColumn = 80
+JavaSyntaxKit.RightMarginColor = 0xdd6666
 #
 # -----------------------------------------------------------------------------
 #
