@@ -7,7 +7,7 @@ Version 0.9.3 - Start of scripts for the document:
     * Created SyntaxComponent interface and have all UI components implement
       that interface.  DefaultSyntaxKit will use config.properties class to
       dynamically install these components.
-    * Added Right Marigin option and Single Color Selection Options
+    * Added Right Margin option and Single Color Selection Options
     * Added Python, C and C++ Support
     * Added Ruby Syntax Support
     * Fixed Issue 37 (NPE for LineNumbersRuler)
@@ -15,6 +15,7 @@ Version 0.9.3 - Start of scripts for the document:
     * Fixed some JavaDoc comments.
     * Fixed Line Numbers being displayed for the height of the editor and now
       just for the actual available lines.
+    * Fixed Mrgin typo in all project. Issue 43
 Version 0.9.2:
     * Fixing Java Indentation and Un-Indentattion Actions
     * Added and used (in the Tester) clearUndoes on the SyntaxDocument
